--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                   <img
                     class="dp"
                     class="img-fluid"
-                    src="/images/Layer 1.png"
+                    src="images/Layer 1.png"
                     alt=""
                   />
-                  <img class="lines" src="./images/round border.png" alt="" />
+                  <img class="lines" src="images/round border.png" alt="" />
                 </div>
               </div>
             </div>
@@ -150,7 +150,7 @@
               data-aos-duration="1000"
             >
               <img
-                src="./images/about bg1.png"
+                src="images/about bg1.png"
                 class="img-fluid"
                 alt="about me"
               />
@@ -172,7 +172,7 @@
               </p>
 
               <div>
-                <button class="btn draw-border" onclick="window.location.href='/images/resume.pdf'">
+                <button class="btn draw-border" onclick="window.location.href='images/resume.pdf'">
                   Download CV
                   <i class="fa-solid fa-download"></i>
                 </button>
@@ -298,7 +298,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/adidas-mockup.jpg"
+                src="images/adidas-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             />
@@ -308,7 +308,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/work2-mockup.jpg"
+                src="images/work2-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -317,7 +317,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/netflix-mockup.jpg"
+                src="images/netflix-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -326,7 +326,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/work1-mockup.jpg"
+                src="images/work1-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -335,7 +335,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/cult-fitness-mockup.jpg"
+                src="images/cult-fitness-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -346,14 +346,14 @@
           <div id="WebDevelopment" class="tabcontent">
             <!-- Images for Web Development category -->
             <a href="https://mithunchandran.github.io/Go-Green/">
-              <img src="/images/work1-mockup.jpg" alt="Image" class="img-fluid"
+              <img src="images/work1-mockup.jpg" alt="Image" class="img-fluid"
             /></a>
             <a href=" https://mithunchandran.github.io/nescafe/">
-              <img src="/images/work2-mockup.jpg" alt="Image" class="img-fluid"
+              <img src="images/work2-mockup.jpg" alt="Image" class="img-fluid"
             /></a>
             <a href=" https://mithunchandran.github.io/netflix/">
               <img
-                src="/images/netflix-mockup.jpg"
+                src="images/netflix-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -364,13 +364,13 @@
             <!-- Images for WordPress category -->
             <a href="https://my-websites.cloud/adidas">
               <img
-                src="/images/adidas-mockup.jpg"
+                src="images/adidas-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
             <a href="https://my-websites.cloud/cultfitness/">
               <img
-                src="/images/cult-fitness-mockup.jpg"
+                src="images/cult-fitness-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -403,7 +403,7 @@
             </p>
             <div class="phone">
               <img
-                src="./images/Group 7.png"
+                src="images/Group 7.png"
                 alt="phone"
                 width="30px"
                 height="30px"
@@ -412,7 +412,7 @@
             </div>
             <div class="phone">
               <img
-                src="./images/email.png"
+                src="images/email.png"
                 alt="mail"
                 width="30px"
                 height="30px"
