--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
     <title>portfolio</title>
   </head>
   <body>
+    
     <header>
-      <!-- section1 -->
-
-      <section class="section1">
         <nav class="navbar navbar-expand-lg">
           <div class="container">
             <a class="navbar-brand" href="#">MITHUN.</a>
@@ -71,7 +69,11 @@
             </div>
           </div>
         </nav>
+      </header>
 
+      <!-- <---section1----> 
+
+      <section class="section1">
         <div class="container">
           <div class="banner">
             <div class="row">
@@ -102,10 +104,10 @@
                   <img
                     class="dp"
                     class="img-fluid"
-                    src="images/Layer 1.png"
+                    src="/images/Layer 1.png"
                     alt=""
                   />
-                  <img class="lines" src="images/round border.png" alt="" />
+                  <img class="lines" src="./images/round border.png" alt="" />
                 </div>
               </div>
             </div>
@@ -135,7 +137,6 @@
           </div>
         </div>
       </section>
-    </header>
 
     <!-- about -->
 
@@ -150,7 +151,7 @@
               data-aos-duration="1000"
             >
               <img
-                src="images/about bg1.png"
+                src="./images/about bg1.png"
                 class="img-fluid"
                 alt="about me"
               />
@@ -172,7 +173,7 @@
               </p>
 
               <div>
-                <button class="btn draw-border" onclick="window.location.href='images/resume.pdf'">
+                <button class="btn draw-border" onclick="window.location.href='/images/resume1.pdf'">
                   Download CV
                   <i class="fa-solid fa-download"></i>
                 </button>
@@ -294,48 +295,48 @@
             <!-- hi -->
 
             <!-- Images for All category -->
-            <a href="https://my-websites.cloud/adidas">
+            <a href="https://my-websites.cloud/adidas" target="_blank">
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="images/adidas-mockup.jpg"
+                src="/images/adidas-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             />
           </a>
 
-            <a href=" https://mithunchandran.github.io/nescafe/">
+            <a href=" https://mithunchandran.github.io/nescafe/" target="_blank">
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="images/work2-mockup.jpg"
+                src="/images/work2-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
 
-            <a href="https://mithunchandran.github.io/netflix/">
+            <a href="https://mithunchandran.github.io/netflix/" target="_blank">
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="images/netflix-mockup.jpg"
+                src="/images/netflix-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
 
-            <a href="https://mithunchandran.github.io/Go-Green/">
+            <a href="https://mithunchandran.github.io/Go-Green/" target="_blank">
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="images/work1-mockup.jpg"
+                src="/images/work1-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
 
-            <a href="https://my-websites.cloud/cultfitness/">
+            <a href="https://my-websites.cloud/cultfitness/" target="_blank">
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="images/cult-fitness-mockup.jpg"
+                src="/images/cult-fitness-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -345,15 +346,15 @@
 
           <div id="WebDevelopment" class="tabcontent">
             <!-- Images for Web Development category -->
-            <a href="https://mithunchandran.github.io/Go-Green/">
-              <img src="images/work1-mockup.jpg" alt="Image" class="img-fluid"
+            <a href="https://mithunchandran.github.io/Go-Green/" target="_blank">
+              <img src="/images/work1-mockup.jpg" alt="Image" class="img-fluid"
             /></a>
             <a href=" https://mithunchandran.github.io/nescafe/">
-              <img src="images/work2-mockup.jpg" alt="Image" class="img-fluid"
+              <img src="/images/work2-mockup.jpg" alt="Image" class="img-fluid"
             /></a>
-            <a href=" https://mithunchandran.github.io/netflix/">
+            <a href=" https://mithunchandran.github.io/netflix/" target="_blank">
               <img
-                src="images/netflix-mockup.jpg"
+                src="/images/netflix-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -362,15 +363,15 @@
 
           <div id="WordPress" class="tabcontent">
             <!-- Images for WordPress category -->
-            <a href="https://my-websites.cloud/adidas">
+            <a href="https://my-websites.cloud/adidas" target="_blank">
               <img
-                src="images/adidas-mockup.jpg"
+                src="/images/adidas-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
-            <a href="https://my-websites.cloud/cultfitness/">
+            <a href="https://my-websites.cloud/cultfitness/" target="_blank">
               <img
-                src="images/cult-fitness-mockup.jpg"
+                src="/images/cult-fitness-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -403,7 +404,7 @@
             </p>
             <div class="phone">
               <img
-                src="images/Group 7.png"
+                src="./images/Group 7.png"
                 alt="phone"
                 width="30px"
                 height="30px"
@@ -412,7 +413,7 @@
             </div>
             <div class="phone">
               <img
-                src="images/email.png"
+                src="./images/email.png"
                 alt="mail"
                 width="30px"
                 height="30px"
@@ -482,7 +483,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
