--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <img
                     class="dp"
                     class="img-fluid"
-                    src="/images/Layer 1.png"
+                    src="images/Layer 1.png"
                     alt=""
                   />
                   <img class="lines" src="./images/round border.png" alt="" />
@@ -299,7 +299,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/adidas-mockup.jpg"
+                src="images/adidas-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             />
@@ -309,7 +309,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/work2-mockup.jpg"
+                src="images/work2-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -318,7 +318,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/netflix-mockup.jpg"
+                src="images/netflix-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -327,7 +327,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/work1-mockup.jpg"
+                src="images/work1-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -336,7 +336,7 @@
               <img
                 data-aos="zoom-in"
                 data-aos-duration="1000"
-                src="/images/cult-fitness-mockup.jpg"
+                src="images/cult-fitness-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
@@ -347,14 +347,14 @@
           <div id="WebDevelopment" class="tabcontent">
             <!-- Images for Web Development category -->
             <a href="https://mithunchandran.github.io/Go-Green/" target="_blank">
-              <img src="/images/work1-mockup.jpg" alt="Image" class="img-fluid"
+              <img src="images/work1-mockup.jpg" alt="Image" class="img-fluid"
             /></a>
             <a href=" https://mithunchandran.github.io/nescafe/">
-              <img src="/images/work2-mockup.jpg" alt="Image" class="img-fluid"
+              <img src="images/work2-mockup.jpg" alt="Image" class="img-fluid"
             /></a>
             <a href=" https://mithunchandran.github.io/netflix/" target="_blank">
               <img
-                src="/images/netflix-mockup.jpg"
+                src="images/netflix-mockup.jpg"
                 alt="Image"
                 class="img-fluid"
             /></a>
@@ -365,13 +365,13 @@
             <!-- Images for WordPress category -->
             <a href="https://my-websites.cloud/adidas" target="_blank">
               <img
-                src="/images/adidas-mockup.jpg"
+                src="images/adidas-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
             <a href="https://my-websites.cloud/cultfitness/" target="_blank">
               <img
-                src="/images/cult-fitness-mockup.jpg"
+                src="images/cult-fitness-mockup.jpg"
                 alt="image"
                 class="img-fluid"
             /></a>
