--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </p>
 
               <div>
-                <button class="btn draw-border" onclick="window.location.href='images/resume1.pdf'">
+                <button class="btn draw-border" onclick="window.location.href='images/resume.pdf'">
                   Download CV
                   <i class="fa-solid fa-download"></i>
                 </button>
